<resources>
    <string name="app_name">Kinoclub</string>
    <string name="toolbar_text">Киноклуб</string>
    <string name="series_update">Обновления сериалов</string>
    <string name="series_update_list_text">%1$s сезон %2$s серия</string>
    <string name="category">Категория: %1$s</string>
    <string name="year">Год выпуска: %1$s</string>
    <string name="countries">Страна: %1$s</string>
    <string name="genres">Жанр: %1$s</string>
    <string name="qualites">Качество: %1$s</string>
    <string name="translations">Перевод: %1$s</string>
    <string name="duration">Продолжительность: %1$s</string>
    <string name="composers">Композитор: %1$s</string>
    <string name="actors">Актеры: %1$s</string>
    <string name="directors">Режиссёр: %1$s</string>
    <string name="online">Онлайн</string>
    <string name="trailer">Трейлер</string>
    <string name="similar">Рекомендуем посмотреть</string>
    <string name="filter">Настроить фильтры</string>
    <string name="choose_category">Выбрать категорию</string>
    <string name="choose_quality">Выбрать качество</string>
    <string name="choose_genre">Выбрать жанр</string>
    <string name="choose_country">Выбрать страну</string>
    <string name="choose_year">Выбрать год</string>
    <string name="filter_apply">Применить</string>
    <string name="choose_list_submit">Подтвердить</string>
    <string name="sorted_by">Сортировать по</string>
    <string name="order_by_date_text">Дата</string>
    <string name="order_by_rate_text">Рейтинг</string>
    <string name="watch">Смотреть</string>
    <string-array name="order_by">
        <item>Дате обновления</item>
        <item>Дате выхода</item>
        <item>Рейтингу</item>
        <item>Популярности</item>
    </string-array>

    <string name="default_search">Поиск...</string>
    <string name="add">Добавить</string>
</resources>